--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shadow</title>
+  <title>Sound Effects</title>
   <style>
     html, body {
       margin: 0;
@@ -15,7 +15,7 @@
 </head>
 <body>
   <iframe id="embed" 
-          src="https://www.2embed.cc/" 
+          src="https://myinstants.com/" 
           style="border: 0; margin: 0; padding: 0; width: 100vw; height: 100vh;"
           sandbox="allow-scripts allow-forms allow-same-origin allow-presentation allow-top-navigation-by-user-activation"
           allowfullscreen>
