--- a/index.html
+++ b/index.html
@@ -2,67 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sound Effects</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Embed</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       overflow: hidden;
-      background: black;
     }
-
-    #download-btn {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      z-index: 9999;
-      background: #28a745;
-      color: white;
-      padding: 10px 20px;
+    iframe {
       border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-      text-decoration: none;
-    }
-
-    #download-btn:hover {
-      background-color: #218838;
+      width: 100vw;
+      height: 100vh;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <!-- Download Button -->
-  <a id="download-btn" href="https://www.myinstants.com/media/sounds/vine-boom.mp3" download="vine-boom.mp3">
-    Download Vine Boom
-  </a>
-
-  <!-- Iframe to myinstants.com -->
-  <iframe id="embed" 
-          src="https://myinstants.com/" 
-          style="border: 0; margin: 0; padding: 0; width: 100vw; height: 100vh;"
-          sandbox="allow-scripts allow-forms allow-same-origin allow-presentation allow-top-navigation-by-user-activation"
-          allowfullscreen>
+  <iframe 
+    src="https://www.myinstants.com/en/index/us/" 
+    allowfullscreen>
   </iframe>
-
-  <script>
-    // Prevent popup windows
-    window.open = function () {
-      console.warn("Popup blocked by custom ad-blocker.");
-      return null;
-    };
-
-    document.addEventListener("click", function (e) {
-      // Prevent common popup triggers
-      if (e.target && (e.target.tagName === "A" || e.target.tagName === "IMG")) {
-        const href = e.target.getAttribute("href");
-        if (href && href.match(/(popup|ads|doubleclick|tracker|click)/i)) {
-          e.preventDefault();
-          console.warn("Blocked a suspicious link.");
-        }
-      }
-    }, true);
-  </script>
 </body>
 </html>
